devcontainer - add vscode markdown emoji extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,8 @@
     "vscode": {
       "extensions": [
         "yy0931.vscode-sqlite3-editor",
-        "EditorConfig.EditorConfig"
+        "EditorConfig.EditorConfig",
+        "bierner.markdown-emoji"
       ]
     }
   },
