replace spring-2023 with master

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,7 +3,7 @@ name: Build and deploy container image to Azure Web Apps
 on:
   push:
     branches:
-    - spring-2023
+    - master
 
 permissions:
   id-token: write
